tests/parser/parse-fn.3.bad.error
error: Malformed function
  --> test:4:14
   |
 4 |  (define f (fn x 1))
   |                ^ malformed arugment list
help: add parentheses
 4 | (define f (fn (x) 1))
   |               ---
